fix: fixing z-index of background to -1

--- a/packages/website/styles/layouts/corkscrewBackground.scss
+++ b/packages/website/styles/layouts/corkscrewBackground.scss
@@ -3,6 +3,7 @@
   position: absolute;
   width: 100%;
   background-size: cover;
+  z-index: -1;
 
   img {
     position: relative;
